[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scenes/Ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/playerShip1_blue.png" type="Texture" id=3]
[ext_resource path="res://assets/player_tilesheet.png" type="Texture" id=4]
[ext_resource path="res://assets/bgmcustom.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/damn.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/90210.png" type="Texture" id=7]
[ext_resource path="res://assets/kazuyap.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/Kaz.gd" type="Script" id=9]
[ext_resource path="res://assets/dorya.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/boom.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.5, 48 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 110, 80, 110 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 80, 110, 80, 110 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "jalan_kanan",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1420, 1890, 132, 179 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1562, 1890, 132, 179 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 2079, 132, 179 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 142, 2079, 132, 179 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 284, 2079, 132, 179 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 426, 2079, 132, 179 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 568, 2079, 132, 179 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 710, 2079, 132, 179 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 852, 2079, 132, 179 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 994, 2079, 132, 179 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1136, 2079, 132, 179 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 142, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 284, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 426, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 568, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 710, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 852, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 994, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1136, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1278, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1420, 0, 132, 179 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1562, 0, 132, 179 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "godfist",
"speed": 20.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 17.25, 39.75 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 270, 217 )

[node name="Root" type="Node2D"]
position = Vector2( 0, 2 )

[node name="Ground" parent="." instance=ExtResource( 1 )]
position = Vector2( 507.708, 363.86 )

[node name="Ground2" parent="." instance=ExtResource( 1 )]
position = Vector2( 789.149, 294.054 )

[node name="Ground3" parent="." instance=ExtResource( 1 )]
position = Vector2( 225.95, 294.562 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 64, 57 )
script = ExtResource( 2 )
jumpSpeed = 1600
GRAVITY = 4800
jumpAmount = 9999999

[node name="Sprite" type="Sprite" parent="Player"]
visible = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.5, 6 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2, 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 4 )
animation = "jalan_kanan"
frame = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 11 )

[node name="BGMPLayer" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( 0, -2 )
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[node name="punchsfx" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 6 )

[node name="Kaz" type="RigidBody2D" parent="."]
position = Vector2( 848, 190 )
mode = 2
mass = 3.48
gravity_scale = 20.0
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Kaz"]
scale = Vector2( 2, 2 )
frames = SubResource( 28 )
animation = "idle"
frame = 1
playing = true
offset = Vector2( 0, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kaz"]
position = Vector2( -0.5, -12.5 )
scale = Vector2( 2, 2 )
shape = SubResource( 29 )

[node name="YapPlayer" type="AudioStreamPlayer2D" parent="Kaz"]
show_behind_parent = true
stream = ExtResource( 8 )
autoplay = true
max_distance = 1000.0

[node name="Area2D" type="Area2D" parent="Kaz"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kaz/Area2D"]
shape = SubResource( 30 )

[node name="AttackSoundPlayer" type="AudioStreamPlayer2D" parent="Kaz"]
stream = ExtResource( 10 )

[connection signal="body_entered" from="Kaz/Area2D" to="Kaz" method="_on_Area2D_body_entered"]
